<resources>
    <string name="app_name">Projet Android Avancé</string>
    <string name="inputUserLogin">Entrer son user</string>
    <string name="inputPasswordLogin">Entrer son mot de passe</string>
    <string name="validate">Valider</string>
    <string name="inputFirstName">Prénom</string>
    <string name="inputLastName">Nom</string>
    <string name="inputUsername">Nom d\'utilisateur</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Mot de passe</string>
    <string name="back">Retour</string>
    <string name="show">Montrer</string>
    <string name="login">Connexion</string>
    <string name="concept">Concept</string>
    <string name="code">Code</string>
    <string name="developper">Développeur</string>
    <string name="page1_title">Concept de collect de data</string>
    <string name="page2_title">Développée sous Android Kotlin</string>
    <string name="page3_title">Réalisée par Jérémy et Mehdi</string>
    <string name="infoDev">Jérémy SELO et Mehdi RECHID - A2</string>
    <string name="locationText">Inconnu</string>
    <string name="userCreation">S\'inscrire</string>
    <string name="interrogation">Help</string>
    <string name="introduction">Introduction</string>
    <string name="sendData">Envoi de data</string>
    <string name="collectData">Collect de data</string>
    <string name="toast_identification_failed">Vos identifiants sont incorrectes</string>
    <string name="empty_user_id">User Id Vide</string>
    <string name="waiting_for_gps_msg">En attente des données GPS</string>
    <string name="cant_localize">Localisation impossible</string>
    <string name="signupError_msg">Erreur lors de la création</string>
    <string name="signupDoneMsg">Votre compte à bien était crée.</string>
    <string name="dataSentMsg">Les données ont bien était envoyer.</string>
</resources>
