<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/screenMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screen_main_activity" />

    <TextView
        android:id="@+id/introductionPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:textColor="#FF9800"
        android:textSize="20dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sendDataPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendData"
        android:textColor="#2196F3"
        android:textSize="20dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/screenMainActivity" />

    <TextView
        android:id="@+id/collectDataPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collectData"
        android:textColor="#8BC34A"
        android:textSize="20dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>